darkstar/cfg/longhorn/cilium-ingress-lh-orig.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
# The name will end up: cilium-ingress-longhorn for the svc
  name: longhorn
  namespace: longhorn-system
  annotations:
    cert-manager.io/issuer: "letsencrypt-prod" # matches the name of the issuer in the NS
spec:
  ingressClassName: cilium
  rules:
    - host: lh-darkstar.srvrs.co
      http:
        paths:
        - backend:
            service:
              name: longhorn-frontend
              port:
                number: 80
          path: /
          pathType: Prefix
  tls:
    - hosts:
      - lh-darkstar.srvrs.co
      secretName: lh-darkstar-srvrs-co-tls
---
apiVersion: v1
kind: Service
metadata:
  name: cilium-ingress-longhorn
  namespace: longhorn-system
  labels:
    cilium-lb: "true"
